<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Truco</string>
    <string name="nueva_lista">Nueva Lista</string>
    <string name="menu_title">Menú</string>
    <string name="comprar">Comprar</string>
    <string name="consultar_lista">Consultar lista</string>
    <string name="nombre_lista">Nombre de la lista</string>
    <string name="btn_guardar">Guardar</string>
    <string name= "settings_label">Ajustes</string>
    <string name= "settings_title">Configuración global de TruCo</string>
    <string name= "coche_title">Coche</string>
    <string name= "coche_summary">¿Usas un coche para comprar?</string>
    <string name= "first_option_title">Primera opción</string>
    <string name= "first_option_summary">¿Prefieres ir andando o en coche?</string>
    <string name= "consumo_title">Consumo</string>
    <string name= "consumo_summary">Consumo de tu coche</string>
    <string name= "error_title">Error</string>
    <string name= "error_insert_lista">No se ha podido realizar la operación</string>
    <string name= "lista_nombre">Nombre</string>
    <string name= "lista_notas">Notas</string>
    <string name= "no_items">No hay elementos en la lista</string>
    <string name = "add_lista_ok">Lista creada</string>
    <string name= "add_lista_fail_exists">Fallo al insertar: Lista repetida</string>
    <string name= "add_lista_fail">Fallo al insertar una lista</string>
    <string name= "obligatorio">Campo obligatorio</string>
    <string name="atras">Atrás</string>
    <string name="conf_name">Configuración</string>
    <string name="conf1">Radio de búsqueda</string>
    <string name="units_name">Unidad</string>
    <string-array name="units">
        <item >m.</item>
        <item >Km.</item>
    </string-array>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
</resources>