<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android1="http://schemas.android.com/apk/res/android">
	<TextView
	    android:layout_width = "fill_parent"
	    android:layout_height = "wrap_content"
	    android:text ="@string/menu_title" />
	<Button android:id="@+id/Btn_nueva_lista"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nueva_lista" />

	<Button
	    android1:id="@+id/Btn_mis_listas"
	    android1:layout_width="fill_parent"
	    android1:layout_height="wrap_content"
	    android1:text="@string/consultar_lista" />

	<Button android:id="@+id/Btn_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title" />
</LinearLayout>